--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ nav {
     justify-content: space-between;
     align-items: center;
     background-color: #12372A;
+    position: fixed;
+    top: 0;
+    width: 92%;
+    z-index: 1000;
 }
 
 nav a {
@@ -37,6 +41,7 @@ nav a {
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+    text-align: right;
 }
 
 .nav-links ul li a {
@@ -95,22 +100,76 @@ nav a {
     transition: 1s;
 }
 
-@media(max-width: 700px) {
-    .text-box h1{
-        font-size: 20px;
+@media (max-width: 768px) {
+    nav {
+        padding: 1% 2%; 
+        width: 100%; 
     }
-    .nav-links ul li{
-        display: block;
+
+    nav a {
+        font-size: 30px; 
     }
-    .nav-links{
-        position: absolute;
-        background: #12372A;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: 0;
-        text-align: left;
-        z-index: 2;
+
+    .nav-links {
+        text-align: center; 
+    }
+
+    .nav-links ul {
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav-links ul li {
+        display: contents; 
+        text-align: center; 
+        padding: 10px 0; 
+        margin-top: 10px;
     }
     
+}
+
+
+/*---- About ----*/
+
+.about{
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+    background-color: #FBFADA;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.row {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-col {
+    flex-basis: 21%;
+    background: #ADBC9F;
+    border-radius: 10px;
+    margin: 1%;
+    padding: 20px 15px;
+    box-sizing: border-box;
+}
+
+h3 {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+.about-col:hover {
+    box-shadow: 0 0 20px 0px rgba(121, 233, 121, 0.75);
+
+}
+
+@media(max-width: 700px){
+    .row {
+        flex-direction: column;
+    }
 }
