--- a/style.css
+++ b/style.css
@@ -262,3 +262,29 @@ h3 {
     background-color: #12372A;
     color: #ffffff;
 }
+
+@media(max-width: 768px){
+    .text-box h1{
+        font-size: 20px;
+    }
+    nav a {
+        font-size: 30px; 
+    }
+    .nav-links ul {
+        margin: 0;
+        padding: 0;
+    }
+    .nav-links ul li {
+        display: contents; 
+        text-align: center; 
+        padding: 10px 0; 
+        margin-top: 10px;
+    }
+    .row {
+        flex-direction: column;
+    }
+    h1 {
+        font-size: 20px;
+        text-align: center;
+    }
+}
